# VESC_CAN

./: .gitignore  pyproject.toml  vesc_utils.py
Examples/: 8_sliders_current.py  VESC_log.py  dual_slider.py  dual_slider_funcs.py  dual_slider_rpm.py  set_rpm.py  slider_control.py  vesc_test.py
src/vesc_can/: __init__.py  vesc_utils.py
