[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vesc-can"
version = "0.1.5"
description = "Python-driver for VESC via CAN"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "Sigurd Werner-Torgersen", email = "sigurd.w.torgersen@wheel.me" }]
dependencies = ["python-can"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["vesc_can"] 
